# nanogpt-rs

./: .gitignore  CHANGELOG.md  pubspec.yaml
.github/workflows/: build-android.yml  build-ios.yml  build-linux-arm.yml  build-linux.yml  build-mac.yml  build-win.yml
android/app/: build.gradle.kts  nanogpt-keystore.jks.enc
android/app/src/main/: AndroidManifest.xml
ios/: export_options.plist
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  store.dart  store.g.dart
lib/src/rust/: frb_generated.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/packaging/: nanogpt.appdata.xml
linux/packaging/appimage/: make_config.yaml
linux/packaging/deb/: make_config.yaml
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
misc/: app.json  apple.distrib.p12.enc  gcp.json.enc  ios.mobileprovision.enc  macos.cert.enc
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  tokenize.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: lnanogpt.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: lnanogpt.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/packaging/exe/: make_config.yaml
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
