[package]
name = "lnanogpt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}
log = "0.4"

flutter_rust_bridge = "=2.11.1"
reqwest = "0.12.23"
env_logger = "0.11.8"
lazy_static = "1.5.0"
serde_json = "1.0.143"
serde = "1.0.219"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
